--- a/src/BuildingBlocks/ClientBuilder/ClientBuilder.KucoinBotClient/ClientBuilder.KucoinBotClient.csproj
+++ b/src/BuildingBlocks/ClientBuilder/ClientBuilder.KucoinBotClient/ClientBuilder.KucoinBotClient.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Kucoin.Net" Version="4.0.12" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
