Added grid strategy

--- a/src/WorkerService/Worker/TradeBotDotNet.Worker/appsettings.json
+++ b/src/WorkerService/Worker/TradeBotDotNet.Worker/appsettings.json
@@ -4,5 +4,17 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "SpotApiCredentials": {
+    "ApiKey": "",
+    "ApiSecret": "",
+    "ApiPassPhrase": ""
+  },
+  "GridStrategyConfig": {
+    "Symbol": "ETH2-ETH",
+    "StepsCount": 3,
+    "Step": 0.005,
+    "Quantity": 0.01,
+    "StartPrice": 0.92
   }
 }
